@@ -1,15 +1,21 @@
 package de.neuefische.backend.service;
 
 import de.neuefische.backend.model.MongoUser;
+import de.neuefische.backend.model.MongoUserDTO;
 import de.neuefische.backend.repo.MongoUserRepo;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
+import org.springframework.security.crypto.argon2.Argon2PasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.UUID;
 
 @Service
 @RequiredArgsConstructor
@@ -20,6 +26,17 @@ public class MongoUserDetailsService implements UserDetailsService {
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
         MongoUser mongoUser = repo.findMongoUserByUsername(username)
                 .orElseThrow(() -> new UsernameNotFoundException("User with username:" + username + " not found"));
-        return new User(mongoUser.getUsername(), mongoUser.getPassword(), List.of());
+        return new User(mongoUser.getUsername(), mongoUser.getPassword(), mongoUser.getRoles());
+    }
+
+    public MongoUserDTO saveUser(MongoUserDTO user) {
+        if (repo.findMongoUserByUsername(user.getUsername()).equals(user.getUsername())){
+            throw new IllegalArgumentException("Username already taken");
+        }
+        PasswordEncoder encoder = Argon2PasswordEncoder.defaultsForSpringSecurity_v5_8();
+        MongoUser x = new MongoUser(UUID.randomUUID().toString(), user.getUsername(), encoder.encode(user.getPassword()),Collections.singletonList(
+                new SimpleGrantedAuthority("user")));
+        repo.save(x);
+        return new MongoUserDTO(x.getId(), x.getUsername());
     }
 }
